[ CHANGELOG
	Project Name
		The Forgotten Server

	Version
		0.2.14

	Codenamed
		"Mystic Spirit"

	License
		GNU GPLv2

	Forum
		http://otland.net/
]

[ File changes
	D = Deleted.
	M = Modified.
	A = Added.

	M The Forgotten Server.exe
]

[ Milestone
	Anti House Trashing.
	Fixed so summons that aren't summoned by players will poff instead of drop corpse.
	Added English Chat and improved some chat code.
	It is now possible to sleep in bed, even with battle sign (hidden one because player is in PZ).
	Fixed a possible issue with decaying items that use decrease/increaseItemId function in actions.
	Fixed so the list doesn't get cut off if there are too many entries listed with /mccheck.
	Corrected the new shoot effect constants.
	Corrected the exit code from server save/shutdown.
	Bug reports can now only be submitted by tutors.
	Optimized creature and item iterations on tiles.
	Optimized Mission::getDescription in questlog.
	Battle sign is no longer visible in protection zone.
	No longer showing "Questlog has been updated." for missions with main state (like killing tasks).
	Improved code for hangables, they should no longer fall in water if the wall is on a water tile.
	Support for .otbm and .otbi files saved with "OTBM" or "OTBI" as the first four bytes.
	Updated the MySQL schema, for an unknown reason it was missing the changes from database schema version 1.
	Making use of boost::thread for Scheduler and Dispatcher for more portable code.
	TCP no_delay is now enabled, should fix tileskipping when mapclicking with high speed or dashing.
	Added offline training code to the database manager. The full code will be commited once it has been tested enough.
	Changed how shutdown works, the server should now properly exit instead of a forced exit.
	House items are now properly transferred to depot inbox instead of the locker.
	Rewrote the code to calculate time to next global server save, it's looks a lot better now and is probably faster too.