@@ -22,8 +22,8 @@
 #define __OTSERV_DEFINITIONS_H__
 
 #define CLIENT_VERSION_MIN 960
-#define CLIENT_VERSION_MAX 960
-#define CLIENT_VERSION_STR "9.60"
+#define CLIENT_VERSION_MAX 961
+#define CLIENT_VERSION_STR "9.61"
 
 #ifdef _WIN32
 #ifndef WIN32
