@@ -91,7 +91,8 @@ enum clientVersion_t
 	CLIENT_VERSION_952 = 37,
 	CLIENT_VERSION_953 = 38,
 	CLIENT_VERSION_954 = 39,
-	CLIENT_VERSION_960 = 40
+	CLIENT_VERSION_960 = 40,
+	CLIENT_VERSION_961 = 41
 };
 
 enum rootattrib_
